<resources>
    <string name="app_name" translatable="false">ZDMS</string>
    <string name="application_name" translatable="false">ZDMS</string>
    <string name="hint_username" translatable="false">Username</string>
    <string name="hint_email" translatable="false">Email</string>
    <string name="hint_password" translatable="false">Password</string>
    <string name="hint_phone" translatable="false">Phone</string>
    <string name="hint_name" translatable="false">Name...</string>
    <string name="hint_title" translatable="false">Title...</string>
    <string name="text_sign_in" translatable="false">Sign In</string>
    <string name="text_sign_up" translatable="false">Sign Up</string>
    <string name="text_already_member" translatable="false">Already a member? Sign In</string>
    <string name="text_not_a_member" translatable="false">Not yet a member? Sign Up</string>
    <string name="forgot_password" translatable="false">forgot Password? Reset here...</string>
    <string name="sign_up_successful" translatable="false">Sign Up Successful</string>
    <string name="sign_in_successful" translatable="false">Sign In Successful</string>
    <string name="message_user_added" translatable="false">User Added Successfully</string>
    <string name="message_admin_added" translatable="false">Admin Added Successfully</string>
    <string name="error_username" translatable="false">Username field cannot be left empty</string>
    <string name="error_email" translatable="false">Email field cannot be left empty</string>
    <string name="error_password" translatable="false">Password field cannot be left empty</string>
    <string name="error_password_length" translatable="false">Oops! password length must be 6 characters and above</string>
    <string name="error_invalid_phone" translatable="false">Oops! please enter a valid phone number</string>
    <string name="error_invalid_email" translatable="false">Oops! please enter a valid email address</string>
    <string name="error_empty_field" translatable="false">Field cannot be left empty</string>
    <string name="error_occurred" translatable="false">Error occurred, please check network connectivity</string>
    <string name="text_continue" translatable="false">Continue</string>
    <string name="watermark" translatable="false">Designed and Developed by Zentech I.T Solutions</string>
    <string name="text_start" translatable="false">Get Started</string>
    <string name="title_welcome" translatable="false">Welcome</string>
    <string name="text_welcome_body" translatable="false">
        Get Started by signing onto the system with your credentials
    </string>
    <string name="title_upload_files" translatable="false">Upload Files</string>
    <string name="text_upload_file" translatable="false">
        You have all your files just right in your pocket
    </string>
    <string name="title_share_files" translatable="false">Share Files</string>
    <string name="text_share_files" translatable="false">
        Shares files with friends, families and colleagues anytime, anywhere
    </string>
    <string name="text_sign_out" translatable="false">Sign out</string>
    <string name="text_exit" translatable="false">Exit</string>
    <string name="text_search" translatable="false">Search</string>
    <string name="hint_search" translatable="false">Search...</string>
    <string name="text_home" translatable="false">Home</string>
    <string name="text_dashboard" translatable="false">Admin DashBoard</string>
    <string name="text_welcome_admin" translatable="false">Welcome Admin</string>
    <string name="text_no_users" translatable="false">No users added</string>
    <string name="text_no_documents" translatable="false">No documents added yet</string>
    <string name="text_no_document_to_assign" translatable="false">No documents yet to assign</string>
    <string name="text_users_list" translatable="false">List of Users</string>
    <string name="text_archive_documents" translatable="false">Archive Documents</string>
    <string name="text_comment" translatable="false">Add Comment...</string>
    <string name="sign_out_msg" translatable="false">Are you sure you want to sign out?</string>
    <string name="text_add" translatable="false">Add</string>
    <string name="text_manage" translatable="false">Manage</string>
    <string name="text_archive" translatable="false">Archive</string>
    <string name="text_me" translatable="false">Me</string>
    <string name="text_delete" translatable="false">Delete</string>
    <string name="text_assign" translatable="false">Assign</string>
    <string name="text_submit" translatable="false">Submit</string>
    <string name="text_view" translatable="false">View</string>
    <string name="text_download" translatable="false">Download</string>
    <string name="text_add_user" translatable="false">User</string>
    <string name="text_choose" translatable="false">Choose from Gallery</string>
    <string name="title_assign" translatable="false">Are you sure?</string>
    <string name="title_assign_user" translatable="false">Assign to this user?</string>
    <string name="text_yes" translatable="false">YES</string>
    <string name="text_no" translatable="false">NO</string>
    <string name="text_delete_dialog" translatable="false">DELETE</string>
    <string name="text_dismiss_dialog" translatable="false">DISMISS</string>
    <string name="text_proceed" translatable="false">PROCEED</string>
    <string name="text_cancel" translatable="false">Cancel</string>
    <string name="text_confirm_assign" translatable="false">Assigning this document means that a user to whom the document
        is assigned to can view the document</string>
    <string name="text_confirm" translatable="false">Are you sure you want to assign this document to this user?</string>
    <string name="title_delete" translatable="false">Are you sure?</string>
    <string name="text_confirm_delete" translatable="false">
        Deleting this account will result in completely removing user account from the system
        and user wont be able to access the app
    </string>
    <string name="msg_delete_document" translatable="false">
        Deleting this document will result in completely removing the document from the system
        and users wont be able to access the document
    </string>
    <string name="msg_document_archive">Archiving this document will remove it from the list of documents
                                but can be accessed in the archived document section. </string>
    <string name="msg_enter_password" translatable="false">Please enter your password</string>
    <string name="msg_document_unarchived" translatable="false">document unarchived successfully</string>
    <string name="msg_document_archived" translatable="false">document archived successfully</string>
    <string name="msg_document_deleted" translatable="false">document deleted successfully</string>
    <string name="message_confirm_delete" translatable="false">
        Are you sure you want to delete this document?
    </string>
    <string name="hint_enter_current_password">Enter your current password</string>
    <string name="text_add_image">Please add an image of the document to proceed!</string>
    <string name="title_smile" translatable="false">Smile</string>
    <string name="text_smile" translatable="false">Enjoy the app with smiles</string>
    <string name="title_assign_document" translatable="false">Assign Document</string>
    <string name="title_users" translatable="false">Users</string>
    <string name="document_added" translatable="false">Document added successfully</string>
    <string name="view_document" translatable="false">View Document</string>
    <string name="document_viewer" translatable="false">Document Viewer</string>
    <string name="title_files" translatable="false">Add files... </string>
    <string name="add_file_extensions">Add PDF, DOC, PPT, XLSL Files</string>
    <string name="message_document_assigned" translatable="false">document assigned successfully</string>
    <string name="text_sender" translatable="false">Sender</string>
    <string name="text_adding_document" translatable="false">Adding Document</string>
    <string name="text_please_wait" translatable="false">please wait...</string>
    <string name="verification_sent" translatable="false">
        Sign Up Successful. A verification link has been sent to
        Please visit your inbox to verify your email address. Thanks for joining us!
    </string>
    <string name="text_email_not_verified" translatable="false">
        Email address is not verified,
        please verify your email from your inbox
    </string>
    <string name="text_permission" translatable="false">
        Permissions are required in order to use the scanner in this application
    </string>
    <string name="text_permission_read_storage" translatable="false">
        Permissions are required in order access files on your device
    </string>
    <string name="text_permission_select_profile" translatable="false">
        Permissions are required in order to update your profile by accessing your camera or photos
    </string>
    <string name="text_instruction" translatable="false">
        Please click on the round button below to select an option
    </string>
    <string name="text_tag" translatable="false">Tag</string>
    <string name="text_type" translatable="false">Type</string>
    <string name="title_assign_to" translatable="false">Assign To...</string>
    <string name="text_menu" translatable="false">My Menu</string>
    <string name="text_history" translatable="false">History</string>
    <string name="text_my_profile" translatable="false">My Profile</string>
    <string name="text_sent" translatable="false">Sent</string>
    <string name="text_received" translatable="false">Received</string>
    <string name="text_need_guide" translatable="false">Need a Guide?</string>
    <string name="title_change_profile" translatable="false">Need to change profile picture?</string>
    <string name="text_change_profile_body" translatable="false">Click on the pencil icon or the image Icon to proceed</string>
    <string name="text_guide_me" translatable="false">Guide Me</string>
    <string name="text_guide_body" translatable="false">We will give directions to new users</string>
    <string name="text_user_type" translatable="false">User Type</string>
    <string name="text_admin" translatable="false">Admin</string>
    <string name="text_author" translatable="false">Author</string>
    <string name="text_distributee" translatable="false">Distributee</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="hint_contact_details" translatable="false">Contact Details</string>
    <string name="received_documents" translatable="false">Received Documents</string>
    <string name="sent_documents" translatable="false">Sent Documents</string>
    <string name="no_received_documents" translatable="false">No received documents yet</string>
    <string name="no_archived_documents" translatable="false">No archived documents yet</string>
    <string name="no_sent_documents" translatable="false">No sent documents yet</string>
    <string name="title_add_users" translatable="false">Add Users</string>
    <string name="title_manage_users" translatable="false">Manage Users</string>
    <string name="title_archive_document" translatable="false">Archive Documents</string>
    <string name="title_archived_document" translatable="false">Archived Documents</string>
    <string name="text_unarchive" translatable="false">unarchive</string>
    <string name="title_other" translatable="false">Other</string>
    <string name="title_share" translatable="false">Share</string>
    <string name="title_sign_out" translatable="false">Sign Out</string>
    <string name="other_document_format" translatable="false">Add PDF , DOC , PPT Files</string>
</resources>