<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_add_other_document"
        android:title="@string/other_document_format"
        android:orderInCategory="100"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/menu_share"
        android:title="@string/title_share"
        android:orderInCategory="200"
        app:showAsAction="never">
    </item>

    <!-- menu item for sign out -->
    <item
        android:id="@+id/menu_sign_out"
        android:title="@string/text_sign_out"
        android:orderInCategory="300"
        app:showAsAction="never">
    </item>

    <item
       android:id="@+id/menu_smile"
       android:title="@string/title_smile"
       android:icon="@drawable/ic_face"
       android:orderInCategory="200"
       app:showAsAction="ifRoom|collapseActionView">
   </item>


</menu>