<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/recyclerView"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_margin="@dimen/margin_small">

        <ImageView
            android:id="@+id/document_image"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:layout_centerVertical="true"
            android:src="@drawable/scanned_file"
            android:background="@drawable/image_border_purple"
            android:layout_margin="@dimen/margin_small"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/document_image"
            android:layout_marginStart="@dimen/margin_normal">

            <TextView
                android:id="@+id/document_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_title"
                android:textColor="@color/navy"
                android:layout_margin="2dp"
                android:fontFamily="@font/lato"/>

            <TextView
                android:id="@+id/document_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_tag"
                android:textColor="@color/navy"
                android:layout_margin="2dp"
                android:fontFamily="@font/lato"/>

            <TextView
                android:id="@+id/document_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_comment"
                android:textColor="@color/navy"
                android:layout_margin="2dp"
                android:fontFamily="@font/lato"/>

            <TextView
                android:id="@+id/document_distributee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_distributee"
                android:textColor="@color/navy"
                android:layout_margin="2dp"
                android:fontFamily="@font/lato"/>

            <TextView
                android:id="@+id/document_sender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_sender"
                android:textColor="@color/navy"
                android:layout_margin="2dp"
                android:fontFamily="@font/lato"/>

        </LinearLayout>


        <ImageButton
            android:id="@+id/button_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delete_purple"
            android:layout_margin="5dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:background="@null"/>

        <ImageButton
            android:id="@+id/button_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_view_purple"
            android:layout_margin="5dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:background="@null"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:alpha="0.5"
        android:layout_alignParentBottom="true"
        android:background="@android:color/darker_gray"/>


</RelativeLayout>
