<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/onboarding_screen_bg_one"
    tools:context=".ui.OnBoardingScreenOneActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circularImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/first_icon"
        android:layout_marginTop="88dp"
        app:civ_border_color="@color/deep_red"
        app:civ_border_width="0.5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_welcome"
        android:textColor="@color/colorWhite"
        android:textSize="25sp"
        android:fontFamily="@font/lato_bold"
        android:padding="5dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/circularImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/body"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/text_welcome_body"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:fontFamily="@font/lato"
        android:padding="5dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:lineSpacingExtra="6dp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_margin="30dp"
        android:padding="5dp"
        android:text="@string/text_continue"
        android:textColor="@color/button_text_color"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:fontFamily="@font/lato"
        android:background="@drawable/circular_button_1"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>